# proyecto-si889-2025-i-u3-ticona-martinez-perez

./: LICENSE  MANIFEST.in  README.md  index.html  index.js  index.md  package-README.md  package.json  presentacion.md  pyproject.toml  setup.py  sonar-project.properties
.github/: deploy.yml  release.yml  semgrep.yml  snyk.yml  sonar.yml  terraform.yml
.github/workflows/: publish-package.yml  release.yml
Documentos/Diccionario de Datos/: diccionario_datos.md
Documentos/Estandar de Programacion/: Estandar de Programacion.md
Documentos/FD01_DocumentoFactibilidad/: FD01_DocumentoFactibilidad.md
Documentos/FD02_DocumentoVision/: FD02_DocumentoVision.md
Documentos/FD03_DocumentoSRS/: FD03_DocumentoSRS.md
Documentos/FD04_DocumentoSAD/: FD04_DocumentoSAD.md
Documentos/FD05_InformeProyectoFinal/: FD05_InformeProyectoFinal.md
Documentos/FD06_PropuestaProyecto/: FD06_PropuestaProyecto.md
Documentos/Telemetria/: Telemetria.md
Proyecto/Frontend/: .npmrc  package.json  vite.config.js
Proyecto/Frontend/src/: package-index.js
Proyecto/Frontend/src/components/: Button.jsx
terraform_analisis/: analisis_economico.txt  main.tf  outputs.tf  provider.tf  terraform.tfstate  variables.tf
uml_generator/: __init__.py  main.py
