[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "uml-diagram-generator"
version = "1.0.0"
description = "Generador de diagramas UML desde JSON - Proyecto SI889"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "SI889 Team", email = "si889@example.com"}
]
keywords = ["uml", "diagrams", "generator", "json", "fastapi", "si889"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Documentation",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.0",
    "python-multipart>=0.0.12",
    "SQLAlchemy>=2.0.40",
    "alembic>=1.13.0",
    "asyncpg>=0.30.0",
    "passlib>=1.7.4",
    "PyJWT>=2.10.0",
    "bcrypt>=4.3.0",
    "GitPython>=3.1.40",
    "requests>=2.31.0",
    "python-dotenv>=1.1.0",
    "gunicorn>=21.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.15.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.910",
]

[project.scripts]
uml-generator = "uml_generator.main:main"

[project.urls]
Homepage = "https://github.com/tu-usuario/proyecto-si889-2025-i-u3-ticona-martinez-perez"
Documentation = "https://diagrama-react.vercel.app/"
Repository = "https://github.com/tu-usuario/proyecto-si889-2025-i-u3-ticona-martinez-perez"
"Bug Tracker" = "https://github.com/tu-usuario/proyecto-si889-2025-i-u3-ticona-martinez-perez/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["uml_generator*"]
exclude = ["tests*"]
